Visual switches for debug flags in looking glass / lg
Opening a tracking about a feature we've been asked for a bunch of times: making shell/mutter debug flags more easily discoverable in lg
.
Context: We have a bunch of debug options that are not only helpful for shell development but app/toolkit/extension developers and users as well.
Examples include damage and opaque region indicators that help app developers make their app more efficient/perform better.
Currently these debug options are not easily discoverable - the opaque region overlay above can be enabled using Meta.add_debug_paint_flag(Meta.DebugPaintFlag.OPAQUE_REGION)
and so far is not well documented. Other platforms provide app devs with more easily discoverable tools. E.g. MacOS:
One easy way to archive this would be to have a section in Looking Glass that would show a list of available options, easily toggle-able, potentially with some help text. Alternatively it could be a drop-down similar to the accessibly options menu or an extension. Ideas welcome :)