src/meta/util.h
@@ -227,6 +227,11 @@ void meta_remove_clutter_debug_flags (ClutterDebugFlag     debug_flags,
                                       ClutterPickDebugFlag pick_flags);
 
 META_EXPORT
+void meta_get_clutter_debug_flags (ClutterDebugFlag     *debug_flags,
+                                   ClutterDrawDebugFlag *draw_flags,
+                                   ClutterPickDebugFlag *pick_flags);
+
+META_EXPORT
 void meta_add_debug_paint_flag (MetaDebugPaintFlag flag);
 
 META_EXPORT
